LSP Tweaks. NOT WORKING STILL.